a bit more to intro
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@239 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -27,7 +27,8 @@
 {\Large 
 \noindent
 % \input contributors.tex
-Author/contributor list to be added as document is finalized.
+Author/contributor list to be added as document is finalized.\\
+Contact editors: \href{mailto:lhc-dmf-admin@cern.ch}{lhc-dmf-admin@cern.ch}
 }\\
 \vspace{4\baselineskip}
 \noindent
