--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -92,20 +92,47 @@ important to narrow the scope and timescale to the following:
 
 \section{Grounding Assumptions}
 
-The first choice made for the Run-2 benchmarks is on the nature of the
-Dark Matter itself: it is assumed to be a single particle, stable on
-collider timescales and non-interacting with the detector, and a Dirac
-fermion.  The former assumption is reductionistic. The rich particle
-content of the Standard Model is circumstantial evidence that the dark
-matter sector, which constitutes five times as much of the mass of the
-universe, may be more complex than a single particle or a single
-interaction. But, as was often the case in the discoveries of the SM,
-here only one mediator and one search channel might play a dominant
-role in the opening stages of an LHC discovery. The latter assumption
-focuses our work on early LHC searches, where small kinematic
-differences between models will not matter in a discovery scenario,
-and with the imminent re-start of the LHC our report relies heavily on
-a large body of existing theoretical work which made this
+There may not exist any interactions between Standard Model hadrons
+and whatever it is that constitutes cosmological dark matter. If this
+is the case, then proton collisions will not produce dark matter
+particles, and dark matter will not scatter off nuclei in direct
+detection experiments. Yet such interactions might exist, and one or
+both types of experiments may be able to study it. For obvious
+reasons, we study only the latter case in this report.
+
+One needs simplified models because the EFT approach, viable for the
+other types of dark matter searches, breaks down at the LHC. Another
+way of viewing this problem is that any BSM model of dark matter
+requires at least two particles: a dark matter candidate and a
+mediator of the interaction between the dark matter and the Standard
+Model. One strength of collider experiments lies in their ability to
+study the mediator, not the DM itself. A discovery of a \MET signature
+at the LHC would not uniquely imply discovery of dark matter, while at
+the same time discovery of an anomalous and annually-modulated signal
+in a direct-detection experiment would leave unanswered many questions
+about the nature of the interaction. The these two approaches, and
+other types of non-collider searches, provide complementary ways to
+approach the problem, and it is in this spirit that our focus is on
+the mediator. We systematically explore the basic possibilities for
+tree-level exchange: \schannel or \thchannel interactions, and
+mediators of the various possible spins. Though more varied and
+interesting possibilities are added to the literature almost daily,
+these basic building blocks account for much of the physics studied at
+hadron colliders in the past three decades.
+
+The Dark Matter itself is assumed to be a single particle, a Dirac
+fermion WIMP, stable on collider timescales and non-interacting with
+the detector. The former assumption is reductionistic. The rich
+particle content of the Standard Model is circumstantial evidence that
+the dark matter sector, which constitutes five times as much of the
+mass of the universe, may be more complex than a single particle or a
+single interaction. But, as was often the case in the discoveries of
+the SM, here only one mediator and one search channel might play a
+dominant role in the opening stages of an LHC discovery. The latter
+assumption focuses our work on early LHC searches, where small
+kinematic differences between models will not matter in a discovery
+scenario, and with the imminent re-start of the LHC our report relies
+heavily on a large body of existing theoretical work which made this
 assumption. Different types of dark matter particles will typically
 give similar results. The choice of Dirac fermions permits some
 processes forbidden for Majorana fermions. Aside from this, the cases
