--- a/doc/tex/backmatter.tex
+++ b/doc/tex/backmatter.tex
@@ -2,3 +2,5 @@
 
 This research was supported by the Munich Institute for Astro- and Particle Physics (MIAPP) of the DFG cluster of excellence "Origin and Structure of the Universe".
 The authors would like to express a special thanks to the Mainz Institute for Theoretical Physics (MITP) for its hospitality and support. 
+
+\Todo{Add additional acknolwedgements, thank reviewers}
