--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -114,7 +114,7 @@ about the nature of the interaction. The these two approaches, and
 other types of non-collider searches, provide complementary ways to
 approach the problem, and it is in this spirit that our focus is on
 the mediator. We systematically explore the basic possibilities for
-tree-level exchange: \schannel or \thchannel interactions, and
+tree-level exchange: \schannel or \tchannel interactions, and
 mediators of the various possible spins. Though more varied and
 interesting possibilities are added to the literature almost daily,
 these basic building blocks account for much of the physics studied at
