Restructured monojet and ttbar models
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@241 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -104,8 +104,9 @@
 
 \input{frontmatter.tex}
 
+\setcounter{tocdepth}{3}
 \tableofcontents
-
+ 
 \pagebreak
 
 \chapter{Introduction}
@@ -117,9 +118,9 @@
 \label{subsec:MonojetLikeModels}
 \input{tex/MonojetLikeModels}
 
-\chapter{Specific models for signatures with heavy flavor quarks}
-\label{subsec:DMHFModels}
-\input{tex/DMHFModels}
+%\chapter{Specific models for signatures with heavy flavor quarks}
+%\label{subsec:DMHFModels}
+%\input{tex/DMHFModels}
 
 \chapter{Specific models for signatures with EW bosons}
 \label{subsec:EWSpecificModels}
