--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -10,6 +10,7 @@
 \newcommand{\mmed}{\mMed}
 \newcommand{\Mmed}{\mMed}
 \newcommand{\gDM}{\ensuremath{g_{\rm{DM}}}\xspace}
+\newcommand{\gdm}{\gDM}
 \newcommand{\gq}{\ensuremath{g_{\rm q}}\xspace}
 \newcommand{\ifb}{\ensuremath{\rm{fb}^{-1}}\xspace}
 \newcommand{\mdm}{\ensuremath{m_{\rm{DM}}}\xspace}
