--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -114,7 +114,7 @@ The resulting plots are shown in \cite{Racco:2015dxa} for a particular effective
 The advantage of this procedure is that the obtained bounds can be directly and easily recast in any  completion of the EFT, by computing the parameters \Mstar, \Mcut in the full model as functions of the parameters of the complete theory. On the other hand, the resulting limits will be weaker than those obtained using \Qtr and a specific UV completion.
 
 \section{Comments on Unitarity Considerations}
-Like the title says.
+\todo{Waiting for comments from J. Alcaraz}
 
 \section{Recommendation for presentation of EFT results} %change this title
 \label{sec:RecommendationEFTResults}
@@ -143,19 +143,27 @@ that satisfy $\hat{s} > \Mcut ^2$, for example.
 
 \section{Recommendation for contact interaction theories with simplified models available}
 
+\begin{figure}
+\centering
+\includegraphics[width=0.9\textwidth]{figures/monojet/lambda_14TeV_SR1.eps}
+\caption{Comparison of the 95\% CL lower limits on the scale of the interaction of a \Zprime-like simplified model at 14~\tev, in terms of the mediator mass. Corresponding limits from EFT models are shown on the same plot as green dashed lines to show equivalence between the two models for high mediator masses.
+Taken from Ref.\,\cite{ATL-PHYS-PUB-2014-007}.}
+\label{fig:monojet_MstarMmed}
+\end{figure}
+
 If a simplified model can be mapped to a given EFT, then the model's high-mediator-mass limit 
 will converge to the EFT. This can be seen in Fig.~\ref{fig:monojet_MstarMmed}, where the limits on 
-the scale of the interaction of a \Zprime-like simplified model are presented in terms of the mediator mass. 
+the scale of the interaction of a \Zprime-like simplified model are presented in terms of the mediator mass~\footnote{This plot only serves as exemplification of the convergence of the simplified model to a contact
+	interaction operator: before this Report, ATLAS and CMS searches presented search results up to very high couplings and therefore high widths, potentially probing unphysical corners of phase space}. 
 The limits at high mediator mass for this model are equivalent to those of the corresponding EFT benchmark. 
 For this reason, experimental collaboration should deliver results for high-mass mediators instead of 
 pure EFT results, and leave further reinterpretation to theorists.
-\Todo{The extrapolation to other couplings and mediator masses can be
-done using the \Qtr prescription for that model.}
+%\Todo{The extrapolation to other couplings and mediator masses can be
+%done using the \Qtr prescription for that model.}
 
-We therefore recommend the addition of one point at very high mediator mass (5 \tev) to the scan, for each of the DM masses
-for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. Studies are ongoing for $s-$channel vector mediators. 
+We therefore recommend the addition of one point at very high mediator mass (5 \tev) to the scan, for each of the DM masses for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. Studies are ongoing for $s-$channel vector mediators. 
 
-\Todo{Is this sufficient information for reinterpretation, or should we have instructions?}
+%\Todo{Is this sufficient information for reinterpretation, or should we have instructions?}
 
 \section{Recommendation for truncation of theories with no simplified models available}
 
