--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -6,6 +6,10 @@
 \svnid{$Id: $}   
 
 
+All models detailed in this Section are applicable to signatures states where 
+ a photon, a W boson, a Z boson or a Higgs boson are radiated instead of a gluon. 
+The experimental signature is identified as \textit{V+\MET}.
+
 Monojet searches are generally more sensitive
 with respect to final states including bosons, due to the much
 larger rates of signal events featuring quark or gluon radiation with
@@ -20,7 +24,8 @@ and W or Z bosons decaying hadronically
 allow backgrounds to be rejected more effectively,
 making Z/gamma/W+\MET searches
 still worth comparing with searches in the jet+\MET final state.
-\Todo{Additional motivations exist for this final state from SUSY searches.}
+
+%\Todo{Additional motivations exist for this final state from SUSY searches.}
 %TODO: Linda is writing sentence to make this stronger. 
 
 % The three commonly chosen EFT benchmarks for Dirac dark matter that are
@@ -31,9 +36,8 @@ still worth comparing with searches in the jet+\MET final state.
 % the D1 (scalar SM/WIMP interaction), D5 (vector-vector interaction) and D9
 % (tensor interaction) operator.
 
-\subsection{Vector mediator exchanged in the \schannel}
-
-An example Feynman diagram for these processes can be constructed by taking
+In the case of a vector mediator exchanged in the \schannel, 
+an example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
 The interest for searches with W bosons in the final state
 has been elevated by the increased cross section
@@ -65,10 +69,11 @@ with a a small mass mixing between SM Z-boson and the new \Zprime. This leads
 to different effective DM couplings to $u_L$ and $d_L$, proportional to
 their coupling to the Z boson, detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
-The scan in the parameters that characterize this simplified model for EW boson + \MET
-searches follow what is
-already detailed in Section~\ref{subsec:MonojetLikeModels}.
-%FIXME: refer to appropriate subsection
+
+%The scan in the parameters that characterize this simplified model for EW boson + \MET
+%searches follow what is
+%already detailed in Section~\ref{subsec:MonojetLikeModels}.
+
 
 % CD: I tend to like this list so I'll leave it here in hope of recycling it
 % \begin{itemize}
@@ -167,8 +172,8 @@ follow those in Section~\ref{subsec:MonojetLikeModels}.
 
 Even though the sensitivity of mono-boson searches to this model is low and it may not
 be in reach of early LHC searches, we recommend to generate this model for W, Z and photon searches 
-in order to reproduce the kinematics of contact interaction operators described in Section~\ref{sub:EW_EFT_Dim5}, 
-for later reinterpretation.  
+in order to reproduce the kinematics of contact interaction operators that are further 
+described in Section~\ref{sub:EW_EFT_Dim5}, for later reinterpretation.  
 
 \subsection{Colored scalar mediator exchanged in the \tchannel}
 
@@ -206,7 +211,6 @@ The parameter scan for the $t-$ channel model is still under discussion.~\Todo{T
 	and the conclusions that can be drawn from the plots below, need to be
 	cross-checked with those in the monojet channel.}
 
-\newthought{Model implementation discussed in the appendix}
 %\subsection{Model implementation}
 %
 %These models are generated at leading
