--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -462,3 +462,15 @@ These models are generated at leading
 order with \madgraph 2.2.2, using \pythiaEight for the parton shower. No matching is performed. 
 Parameter cards can be found on the Forum SVN 
 repository~\cite{ForumSVN_EWMonoHiggs_2HDM, ForumSVN_EWMonoHiggs}.
+
+\subsection{Model implementation for bFDM model}
+
+We simulate the model using the {\tt MG5\_aMC} v2.2.3. The corresponding card files can be found 
+on the Forum SVN repository~\cite{ForumSVN_DMSingleB}.
+
+\subsection{Model implementation for VASP models for EW bosons}
+
+These models are generated at leading
+order with \madgraph 2.2.2, using Pythia8 for the parton shower.
+Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}.
+\Todo{Add models and instructions for other final states}.
