--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -1,11 +1,11 @@
-Models of bottom-flavored Dark Matter have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. We focus on the $b$-FDM model of Ref.~\cite{Agrawal:2014una}, created to explain the Galactic Center (GC) gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa}. This model is closely related to the $t-$channel mediated model from Section~\ref{sec:monojet_t_channel}, with DM preferentially coupling to bottom quarks, with a decoupled third generation. 
+Models of bottom-flavored Dark Matter that are closely related to the $t-$channel mediated model from this 
+Section have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. Here, DM couples preferentially to bottom quarks, with a decoupled third generation. We describe the $b$-FDM model of Ref.~\cite{Agrawal:2014una}, created to explain the Galactic Center (GC) gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa}. 
 
 \Todo{Spell out implications on MFV assumption.}
 
 The interest in this model lies in producing an annihilation cross section consistent with the gamma-ray excess can be achieved for perturbative values of the couplings, while being consistent with LHC constraints on the colored mediator. For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter coupling preferentially to $b-$ quarks, the model predicts a direct detection cross section that is consistent with current constraints, but within the near future reach of Direct Detection experiments. The model will be decisively tested with data from the upcoming high-energy run at the LHC. 
 
-The model contains a Dirac fermion transforming as a flavor triplet. The third component of the triplet $\chi_b$ comprises the cosmological DM. A flavor singlet, color triplet scalar field $\Phi$ mediates the interactions between the DM and the Standard Model quarks.The model is similar to the MSSM with a light bottom squark and neutralino, and is thus a flavor-specific
-example of a \tchannel model. 
+The model contains a Dirac fermion transforming as a flavor triplet. The third component of the triplet $\chi_b$ comprises the cosmological DM. A flavor singlet, color triplet scalar field $\Phi$ mediates the interactions between the DM and the Standard Model quarks.The model is similar to the MSSM with a light bottom squark and neutralino, and is thus a flavor-specific example of a \tchannel model. 
 
 The Lagrangian considered is given by
 \begin{equation}
@@ -18,12 +18,19 @@ The Lagrangian considered is given by
 
 Within the framework of minimal flavor violation, the other fermions in the flavor triplet can be made sufficiently heavy and weakly-coupled that they can be neglected in the analysis.
 
-\subsection{Parameter scan}
+\paragraph{Parameter scan}
 
 The nature of the model doesn't allow to derive a simple scaling behaviour which would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
-Therefore, the coupling scan is chosen as a discrete set of values $g=0.5,1,2,3$ for each mass point.
-~\Todo{Are we sure the models in SVN have minimal width? What is the max coupling so that the width is still lower than the mass?}
-A sizable, $O(1)$ coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion). The coupling could also be chosen to fullfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
+
+A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit. A sizable, $O(1)$ coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fullfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
+
+A scan of Dark Matter and mediator masses should be done in the on-shell region $MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \mMed. 
+
+%  \item $\mDM=10-500$ GeV with a binning of 50 GeV for $\mDM<100$ and  100 GeV otherwise; 
+%  \item $MPhi=10-1300$ with a binning of 100 GeV;
+
+% Therefore, the coupling scan is chosen as a discrete set of values $g=0.5,1,2,3$ for each mass point.
+%~\Todo{Are we sure the models in SVN have minimal width? What is the max coupling so that the width is still lower than the mass?}
 
 \begin{figure}[h!]
     \begin{minipage}{0.49\textwidth}
@@ -51,43 +58,37 @@ A sizable, $O(1)$ coupling benchmark such as $g=1$ should be considered for each
     \caption{MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $MPhi=500$~GeV for couplings corresponding to relic density weights and also $g=1,2$ \label{fig:g_comp}}
 \end{figure}
 
-In light of these considerations, we recommend to produce the following benchmark points in the parameter space for this model:
+%The following benchmark points could be produced as a starting point for the parameter space for this model:
+%
+%\begin{itemize}
+%  \item $\mDM=10-500$ GeV with a binning of 50 GeV for $\mDM<100$ and  100 GeV otherwise; 
+%  \item $MPhi=10-1300$ with a binning of 100 GeV;
+%  \item $MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data;
+%\end{itemize}
 
-\begin{itemize}
-  \item $\mDM=10-500$ GeV with a binning of 50 GeV for $\mDM<100$ and  100 GeV otherwise; 
-  \item $MPhi=10-1300$ with a binning of 100 GeV;
-  \item $MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data;
-\end{itemize}
+%This scan of the parameter space is summarized in Table~\ref{tab:monobscan}.
+%
+%\begin{table}[!h]
+%\centering
+%\resizebox{\textwidth}{!}{
+%\begin{tabular}{| l |r r r r r r r r r r r r r r|}
+%\hline
+%\multicolumn{1}{|c|}{\mDM (\gev)} & \multicolumn{14}{c|}{\mmed (\gev)} \\
+%\hline
+%  10 &   10 &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+%  50 &      &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+% 100 &      &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+% 200 &      &      &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+% 300 &      &      &      &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+% 400 &      &      &      &      &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+% 500 &      &      &      &      &      &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
+%\hline
+%\end{tabular}
+%}
+%\caption{Simplified model benchmarks for the considered mono-$b$ model, as described in the text.}
+%\label{tab:monobscan}
+%\end{table}
 
-This scan of the parameter space is summarized in Table~\ref{tab:monobscan}.
-
-\begin{table}[!h]
-\centering
-\resizebox{\textwidth}{!}{
-\begin{tabular}{| l |r r r r r r r r r r r r r r|}
-\hline
-\multicolumn{1}{|c|}{\mDM (\gev)} & \multicolumn{14}{c|}{\mmed (\gev)} \\
-\hline
-  10 &   10 &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
-  50 &      &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
- 100 &      &  100 &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
- 200 &      &      &  200 &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
- 300 &      &      &      &  300 &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
- 400 &      &      &      &      &  400 &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
- 500 &      &      &      &      &      &  500 &  600 &  700 &  800 &  900 & 1000 & 1100 & 1200 & 1300 \\
-\hline
-\end{tabular}
-}
-\caption{Simplified model benchmarks for the considered mono-$b$ model, as described in the text.}
-\label{tab:monobscan}
-\end{table}
-
-
-Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}.
 %The increase in the center of mass energy from 8 to 13 TeV leads to a cross-section increase that is a function of $MPhi$, 
 %with a smaller dependency for \mDM. Therefore, the sensitivity to this model will increase in early 13~TeV data compared to 8 TeV searches~\cite{Aad:2014vea}.
 
-\subsection{Model implementation}
-
-We simulate the model using the {\tt MG5\_aMC} v2.2.3. The corresponding card files can be found 
-on the Forum SVN repository~\cite{ForumSVN_DMSingleB}.
