Added VA mediators for monojet
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@242 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -158,8 +158,8 @@ the scale of the interaction of a \Zprime-like simplified model are presented in
 The limits at high mediator mass for this model are equivalent to those of the corresponding EFT benchmark. 
 For this reason, experimental collaboration should deliver results for high-mass mediators instead of 
 pure EFT results, and leave further reinterpretation to theorists.
-%\Todo{The extrapolation to other couplings and mediator masses can be
-%done using the \Qtr prescription for that model.}
+\Todo{The extrapolation to other couplings and mediator masses can be
+done using the \Qtr prescription for that model.}
 
 We therefore recommend the addition of one point at very high mediator mass (5 \tev) to the scan, for each of the DM masses for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. Studies are ongoing for $s-$channel vector mediators. 
 
