--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -142,7 +142,7 @@ when considering cut-and-count analysis. Thus the choice of Dirac
 fermion dark matter is deemed sufficient for the benchmarks aiding the
 design of the upcoming Run-2 searches. Nevertheless, a more complete
 set of models will certainly be required upon a discovery; see
-e.g.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva,} for some
+e.g.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva} for some
 studies of observables that may distinguish amongst these models.
 
 We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,D'Ambrosio:2002ex} applies to the
