updates to i2HDM
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@243 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1605,3 +1605,112 @@
       reportNumber   = "CERN-TH-2002-147, IFUP-TH-2002-17",
       SLACcitation   = "%%CITATION = HEP-PH/0207036;%%",
 }
+@article{Belyaev:2015tap,
+      author = "Belyaev, A. and Cacciapaglia, G. and Ivanov, I. and Rojas, F. and Thomas, M.",
+      pages = "to appear",
+}
+
+
+@article{LopezHonorez:2006gr,
+      author         = "Lopez Honorez, Laura and Nezri, Emmanuel and Oliver,
+                        Josep F. and Tytgat, Michel H.G.",
+      title          = "{The Inert Doublet Model: An Archetype for Dark Matter}",
+      journal        = "JCAP",
+      volume         = "0702",
+      pages          = "028",
+      doi            = "10.1088/1475-7516/2007/02/028",
+      year           = "2007",
+      eprint         = "hep-ph/0612275",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ULB-TH-06-27",
+      SLACcitation   = "%%CITATION = HEP-PH/0612275;%%",
+}
+@article{Deshpande:1977rw,
+      author         = "Deshpande, Nilendra G. and Ma, Ernest",
+      title          = "{Pattern of Symmetry Breaking with Two Higgs Doublets}",
+      journal        = "Phys.Rev.",
+      volume         = "D18",
+      pages          = "2574",
+      doi            = "10.1103/PhysRevD.18.2574",
+      year           = "1978",
+      reportNumber   = "OITS-81",
+      SLACcitation   = "%%CITATION = PHRVA,D18,2574;%%",
+}
+
+@article{Dolle:2009fn,
+      author         = "Dolle, Ethan M. and Su, Shufang",
+      title          = "{The Inert Dark Matter}",
+      journal        = "Phys.Rev.",
+      volume         = "D80",
+      pages          = "055012",
+      doi            = "10.1103/PhysRevD.80.055012",
+      year           = "2009",
+      eprint         = "0906.1609",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0906.1609;%%",
+}
+@article{Goudelis:2013uca,
+      author         = "Goudelis, A. and Herrmann, B. and Stål, O.",
+      title          = "{Dark matter in the Inert Doublet Model after the
+                        discovery of a Higgs-like boson at the LHC}",
+      journal        = "JHEP",
+      volume         = "1309",
+      pages          = "106",
+      doi            = "10.1007/JHEP09(2013)106",
+      year           = "2013",
+      eprint         = "1303.3010",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LAPTH-006-13",
+      SLACcitation   = "%%CITATION = ARXIV:1303.3010;%%",
+}
+@article{Burgess:2000yq,
+      author         = "Burgess, C.P. and Pospelov, Maxim and ter Veldhuis,
+                        Tonnis",
+      title          = "{The Minimal model of nonbaryonic dark matter: A Singlet
+                        scalar}",
+      journal        = "Nucl.Phys.",
+      volume         = "B619",
+      pages          = "709-728",
+      doi            = "10.1016/S0550-3213(01)00513-2",
+      year           = "2001",
+      eprint         = "hep-ph/0011335",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "TPI-MINN-00-46, UMN-TH-1922-00, MCGILL-00-31,
+                        IASSNS-HEP-00-83",
+      SLACcitation   = "%%CITATION = HEP-PH/0011335;%%",
+}
+@article{Andreas:2008xy,
+      author         = "Andreas, Sarah and Hambye, Thomas and Tytgat, Michel
+                        H.G.",
+      title          = "{WIMP dark matter, Higgs exchange and DAMA}",
+      journal        = "JCAP",
+      volume         = "0810",
+      pages          = "034",
+      doi            = "10.1088/1475-7516/2008/10/034",
+      year           = "2008",
+      eprint         = "0808.0255",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "ULB-TH-08-27",
+      SLACcitation   = "%%CITATION = ARXIV:0808.0255;%%",
+}
+@article{Arhrib:2013ela,
+      author         = "Arhrib, Abdesslam and Tsai, Yue-Lin Sming and Yuan, Qiang
+                        and Yuan, Tzu-Chiang",
+      title          = "{An Updated Analysis of Inert Higgs Doublet Model in
+                        light of the Recent Results from LUX, PLANCK, AMS-02 and
+                        LHC}",
+      journal        = "JCAP",
+      volume         = "1406",
+      pages          = "030",
+      doi            = "10.1088/1475-7516/2014/06/030",
+      year           = "2014",
+      eprint         = "1310.0358",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1310.0358;%%",
+}
