--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -61,32 +61,28 @@ corresponding in form to the effective dimension-5 operator in Section~\ref{sub:
 
 \section{Inert 2HDM Model}\label{sec:i2HDM}
 
-The idea of an inert Two-Higgs Doublet Model (i2HDM) has been
-initially mentioned more than 30 year ago in~\cite{Deshpande:1977rw}
-an surprisingly since so many years yet has not been explored with
-respect to collider signatures and complementary probes of DM in
-direct and indirect DM search experiments. Here we would like to
-motivate i2HDM and its exploration.
+For most of the simplified models included in this report, the mass of
+the mediator and couplings/width are non-trivial parameters of the
+model. In these scenarios, we remain agnostic about the theory behind
+the dark matter sector and try to parametrize it in simple terms.
 
-For most of the simplified models included in this report, the mass of the mediator and potentially its width are a non-trivial parameters of the model. In these scenarios, we remain agnostic about the theory behind the dark matter sector and try to parametrize it in simple terms. We have not addressed how to extend the simplified models to realistic and viable models which are consistent with the symmetries of the Standard Model.
+We have not addressed how to extend the simplified models to realistic
+and viable models which are consistent with the symmetries of the
+Standard Model. Simplified models often violate gauge invariance which
+is a crucial principle for building a consistent BSM model which
+incorporates SM together with new physics. For example, with a new
+heavy gauge vector boson mediating DM interactions, one needs not just
+the dark matter and its mediator, but also a mechanism which provides
+mass to this mediator in a gauge invariant way.
 
-Simplified models often violate gauge invariance which is a crucial
-principle for building a consistent BSM model which incorporates SM
-together with new physics. For example, considering a simplified model
-with a new heavy gauge vector boson mediating DM interactions, one should
-also introduce mechanism which provides the mass to this mediator in a
-gauge invariant way, which requires necessarily introduction
-additional sector into the model. This approach makes a next logical
-step to consider Minimal Consistent Dark Matter (MCDM) models. MCDM
-models can be understood as a toy models still. On the other hand,
-a particular MCDM model can be easily incorporated into a bigger BSM
-model and be explored via complementary constraints from collider and
-direct/indirect DM search experiments as well as relic density
-constraints.  We explore i2HDM as one of the appealing representative
-of MCDM models and present its important features different from the
-simplified models.
+Considering both the simplified model and other elements necessary for a consistent theory is a next logical step. The authors of \cite{Belyaev:2015tap} term these Minimal
+Consistent Dark Matter (MCDM) models. MCDM models are at the same time still toy models that can be 
+easily incorporated into a bigger BSM model and explored via
+complementary constraints from collider and direct/indirect DM search
+experiments as well as relic density constraints. We discuss this model here both on its own merits and as an example of the flexibility of the simplified model approach.
 
-The i2HDM \cite{Deshpande:1977rw,LopezHonorez:2006gr,Dolle:2009fn,Goudelis:2013uca} is an extension of the SM with a second scalar doublet $\phi_2$ with no direct coupling to fermions.  This doublet has a discrete $Z_2$ symmetry, under which $\phi_2$ is odd and all the other fields are even. 
+The idea of an inert Two-Higgs Doublet Model (i2HDM) was introduced
+more than 30 years ago in~\cite{Deshpande:1977rw,LopezHonorez:2006gr,Dolle:2009fn,Goudelis:2013uca,Balyaev:2015tap}. It is an extension of the SM with a second scalar doublet $\phi_2$ with no direct coupling to fermions.  This doublet has a discrete $Z_2$ symmetry, under which $\phi_2$ is odd and all the other fields are even. 
 The Lagrangian of the odd sector is,
   \begin{equation}
   \mathcal{L} = \frac{1}{2}(D_{\mu}\phi_2)^2 -V(\phi_1,\phi_2)
@@ -112,34 +108,92 @@ v+H
  h_1 + ih_2
 \end{pmatrix}
 \end{equation}
-One can see that a $\phi_2 \rightarrow -\phi_2$ discrete symmetry in
-case of absence of $\phi_2$ coupling with fermions and provides
-stability of the lightest field of the doublet, which is identified as
-the dark matter candidate which also couples to $Z$ boson.
 
-In addition to the SM, i2HDM bring eventually four more degrees of
+In addition to the SM, i2HDM brings four more degrees of
 freedom coming from the inert doublet in the form of $Z_2$-odd charged
 scalar $\textrm{h}^\pm$ and two neutral $Z_2$-odd scalars
 $\textrm{h}_1$ and $\textrm{h}_2$. The lightest neutral scalar, $h_1$
-is identified as the dark matter candidate.
-
-The i2HDM have several other attractive features. On one hand its DM
-sector can induce electroweak symmetry breaking \cite{Hambye:2007vf}
-while on the other hand it provides mechanism of generating neutrino
-masses from radiative corrections \cite{Ma:2006km}. It is also
-possible to embed this model in a SO(10) scenario
-\cite{Kadastik:2009dj}, with $Z_{2}$ been identified with matter
-parity $(-1)^{3(B-L)}$, or in the Universal Extra Dimension scenario
-\cite{Hooper:2007qk}, with the $Z_{2}$ identified with the KK parity.
-This model can also give rise to an improved naturalness
-\cite{Barbieri:2006dq} since large radiative corrections from the
-inert Higgs can `screen` the SM Higgs contribution to the electroweak
-parameter $\Delta T$. The i2HDM model has been explored at the
+is identified as the dark matter candidate. The i2HDM model has been explored at the
 phenomenological level from the perspective of collider DM searches
-\cite{Burgess:2000yq, Andreas:2008xy, Arhrib:2013ela}, but there is
-presently no dedicated experimental analysis.
+\cite{Burgess:2000yq, Andreas:2008xy, Arhrib:2013ela, Belyaev:2015tap}. This model could produce \MET+jet, Z, and Higgs as well as \MET+VBF signatures at the LHC (see Figs.~\ref{fig:fd-monojet1,fig:fd-monojet2,fig:fd-mono-Z,fd:mono-H1,fd:mono-H2,fd-vbf}).
 
+\begin{figure}
+\includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-mono-j1.pdf} 
+\caption{Feynman diagrams for $gg\to h_1 h_1+g$ process
+contributing to mono-jet signature.}
+\label{fig:fd-monojet1}
+\end{figure}
+\begin{figure}[htb]
+\includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-mono-j2.pdf} 
+\caption{Feynman diagrams for $q\bar{q}\to h_1 h_2+g$ ($gq\to h_1 h_2+q$) process 
+contributing to mono-jet signature.}
+\label{fig:fd-monojet2}
+\end{figure}
+\begin{figure}[htb]
+\includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-mono-z.pdf} 
+\caption{Feynman diagrams for $q\bar{q}\to h_1 h_1+Z$  process 
+contributing to mono-Z signature.}
+\label{fig:fd-mono-Z}
+\end{figure}
+\begin{figure}[htb]
+\includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-mono-h1.pdf} 
+\caption{Feynman diagrams for $gg\to h_1 h_1+H$  process 
+contributing to mono-Higgs signature.}
+\label{fig:fd-mono-H1}
+\end{figure}
+\begin{figure}[htb]
+\includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-mono-h2.pdf} 
+\caption{Feynman diagrams for $q\bar{q}\to h_1 h_2+H$  process 
+contributing to mono-Higgs signature.}
+\label{fig:fd-mono-H2}
+\end{figure}
+\begin{figure}[htb]
+\includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-vbf.pdf} 
+\caption{Diagrams for $qq\to qq h_1 h_1$ DM production in vector boson
+fusion process}
+\label{fig:fd-vbf}
+\end{figure}
 
+An experimental analysis of the parameter space has recently been
+performed in Ref.~\cite{Belyaev:2015tap}. The authors of that study
+have implemented the model in CalcHEP and micrOMEGAs and propose a set
+of benchmark points (Table.~\ref{tab:i2HDMbenchMarks}). Though the
+overall parameter space of i2HDM is 5-dimensional, the parameter space
+relevant to a specific LHC signature is only 1-2 dimensional. In the
+mono-jet case, one can use two separate simplified models, a
+$gg\to h_1 h_1+g$ process (via Higgs mediator) and a
+$q\bar{q}\to h_1 h_2+g$ ($gq\to h_1 h_2+q$) process (using Z-boson
+mediator) to capture the physics relevant to the search.
+
+\begin{table*}[htb]
+\centering
+\begin{tabular}{|c||c|c|c|c|c|c|}
+\hline
+ {\bf BM}                       &  {\bf 1}  & {\bf 2}  & {\bf 3}  & {\bf 4}  &  {\bf 5}  \\
+  \hline\hline 
+  $M_{h_{1}}$ (GeV)     & 45 & 53 & 66 & 82 & 120 \\ 
+  \hline
+  $M_{h_{2}}$ (GeV)     &  55  & 189  &  77  &  89  & 140 \\
+  \hline
+  $M_{h_{\pm}}$ (GeV)  & 130 & 182  &  122  &  150  &  200 \\
+  \hline
+  $\lambda_{2}$             &  0.8 & 1.0 & 1.1 & 0.9 & 1.0 \\  
+  \hline
+  $\lambda_{345}$         & $-0.010$ & $-0.024$  & $+0.022$ & $-0.090$  & $-0.100$      \\
+  \hline
+  $\Omega^{2}_{h}$       & $1.1 \times 10^{-1}$ &  $8.1 \times 10^{-2}$  & $9.9 \times 10^{-2}$  & $1.5 \times 10^{-2}$  &  $2.1 \times 10^{-3}$ \\
+  \hline 
+  $\sigma_{SI}$ (fb)        & $1.9 \times 10^{-7}$ &  $7.9 \times 10^{-7}$  & $4.2 \times 10^{-7}$  & $4.5 \times 10^{-7}$  &  $2.6 \times 10^{-6}$ \\
+ \hline 
+  $\sigma_{LHC}$ (fb)     & $1.7 \times 10^{2}$ &  $7.7 \times 10^{2}$  & $4.3 \times 10^{-2}$  & $1.2 \times 10^{-1}$  &  $2.3 \times 10^{-2}$ \\
+  \hline\hline
+\end{tabular}
+\caption{Five benchmarks (BM) for i2HDM in  ($M_{h_{1}},M_{h_{2}},M_{h_{\pm}},\lambda_{2},\lambda_{345}$) parameter space.
+ We also present the corresponding relic density ($\Omega_{h^2}$), the spin-independent cross section for DM scattering on the proton,
+ and the LHC cross section at 13 TeV for mono-jet process $pp\to h_1,h_1+jet$ for $p_T^{jet}>100$~GeV cut.}
+\label{tab:i2HDMbenchMarks}
+\end{table*}
+\clearpage
 
 \section{Tabulated cross-sections}
 
