EW models, some modification in introduction
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@244 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -24,14 +24,17 @@ Higher dimensional operators, up to dimension 8, leading to Higgs+\MET signature
 are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}. The first part of this Section outlines
 the main characteristics for a limited number of these models that could be 
 considered in Run-2 searches. 
-%CD: here I'm being too vague?
 In the spirit of the Forum consensus to privilege simplified models,
 model-independent results as in Appendix~\ref{app:Presentation_Of_Experimental_Results} should be privileged
-over considering these operators as realistic benchmarks.
-However, another consideration that emerged from the Forum discussion was that the EFT approach allowed
-more model-independence for reinterpretations, and it is still worth having
-results available in terms of these operators. We devote the end of this Section to 
-provide a recommendation on how to present the results from this model, including an assessment of their  
+over considering these operators as realistic benchmarks. We also recommend not to 
+optimize searches based on those benchmark models. 
+
+However, another consideration that emerged from the Forum discussion was that the EFT approach allows
+more model-independence when reinterpreting results, making it worth still having
+results available in terms of these operators. Furthermore, once simplified models are available
+for those operators, EFT results can be used as a limiting case for consistency checks. 
+We devote the end of this Section to provide a recommendation on 
+how to present the results from this model, including an assessment of their  
 validity using a conservative procedure that is only dependent on EFT parameters.
 
 %CD: what is this?
