--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -71,8 +71,11 @@ important to narrow the scope and timescale to the following:
 
 \begin{enumerate}
 \item The forum should propose a prioritized, small set of benchmark
-  simplified models should be agreed upon by both collaborations for
-  Run-2 searches.
+  simplified models that should be agreed upon by both collaborations for
+  Run-2 searches. The values for the scan on the parameters of the models for which
+  experimental results are provided should be specified, to facilitate theory reinterpretation 
+  beyond the necessary model-independent limits that 
+  should be provided by all LHC Dark Matter searches. 
 \item The forum should standardize the matrix element implementation
   of the simplified models and harmonize other common technical
   details (order of the calculation, showering) as far as practical. It
@@ -165,7 +168,7 @@ width. We forbid any further decays to other invisible particles of
 the Dark Sector that may increase the width. Studies within the Forum
 show that, for cut and count analyses, the kinematic distributions of
 many models and therefore the sensitivity of the search do not depend
-significantly on the mediator width, as long as the width remains less
+significantly on the mediator width, as long as the width remains smaller
 than the mass of the particle.
 
 The particle content of the models chosen as benchmarks is limited to
@@ -182,7 +185,8 @@ distinct but yet complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
 Contact interaction operators (EFTs) are also part of this report, 
-to be considered whenever neither a simplified model completion nor other simplified models 
+to be considered whenever neither a simplified model completion 
+nor other simplified models 
 yielding similar kinematic distributions are available. 
 This is the case for dimension 5-7 operators with direct 
 Dark Matter-electroweak boson couplings. 
