--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -8,16 +8,11 @@
 
 % preamble
 
-In this Chapter we review recommendations for final states of \MET{} recoiling against a particle extracted from initial state radiation, be it a gluon
-or an electroweak boson ($W/Z/\gamma/H$). Whist the recommendations are general, the discussions in this Chapter are made generally based on the monojet final state. 
-Details on final states with EW boson radiation and with heavy flavor quarks from diagrams arising within these models
-are also discussed in this Chapter.
+In this Chapter we review recommendations for final states of \MET{} recoiling against a particle extracted from initial state radiation, be it a gluon or an electroweak boson ($W/Z/\gamma/H$). Whist the recommendations are general, the discussions in this Chapter are made generally based on the monojet final state. 
+Details on final states with EW boson radiation and with heavy flavor quarks from diagrams arising within these models are also discussed in this Chapter.
 %In the following paragraphs we present the peculiarities of these models that arise in the case of
 %boson radiation, and present some examples of the relevant distributions for these final states.
-These studies and studies in subsequent sections are based on simulation of the models with the generators implementation 
-recommended in each section and provided in a companion CERN SVN repository. Further details on the implementation
-of these models can be found in Appendix~\ref{app:MonojetLikeModels_Appendix}. 
-
+These studies and studies in subsequent sections are based on simulation of the models with the generators implementation recommended in each section and provided in a companion CERN SVN repository. Further details on the implementation of these models can be found in Appendix~\ref{app:MonojetLikeModels_Appendix}. 
 
 %%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%
@@ -336,7 +331,7 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 %% We choose to display the results in the $\mMed$--$\mDM$ plane for the choice of the couplings $\gq=\gDM=1$. 
 
 \subsection{Additional considerations for $V$+\MET{} signatures}
-
+\label{sec:bosonrad}
 \input{tex/EWSpecificModels_VAMediators}
 
 %%%%%%%%%%%%%%%
